created preprocessing, feature engineering and made modifications to the notebook

--- a/data_distribution.ipynb
+++ b/data_distribution.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Distribution\n"
+    "# Data Distribution\n",
+    "\n",
+    "In this notebook, we visualize the data to get more insight into what preprocessing and feature engineering techniques are required to be applied to the data frame before feeding it to the models. We download the data using the `data_downloader.py` file. In the `data/raw/` folder, the data that is going to be used for the models is `train-balanced-sarcasm.csv`.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +66,7 @@
     "\n",
     "root = Path().resolve()\n",
     "\n",
-    "train_data_path = root / 'data' / 'train-balanced-sarcasm.csv'\n",
+    "train_data_path = root / 'data' / 'raw' / 'train-balanced-sarcasm.csv'\n",
     "\n",
     "train_df = pd.read_csv(train_data_path)\n",
     "\n",
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -110,8 +112,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code shows the most frequent subreddits (top 10) in the Reddit data frame."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -137,8 +146,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `label` feature gives either the values of 1 or 0 for sarcastic or non-sarcastic comments. The following code generates the time-series plot based on the date of the published comments alongside their label."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -163,8 +179,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the following code, users can check on the frequency of one word across the entire data frame."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -185,8 +208,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following two codes show the most frequent words (top 15) in the data frame, and respectively the it generates the graph for better visualization."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -207,22 +237,7 @@
       "Rank 12: 'for' appeared 94986 times\n",
       "Rank 13: 'but' appeared 74404 times\n",
       "Rank 14: 'be' appeared 71543 times\n",
-      "Rank 15: 'this' appeared 69497 times\n",
-      "Rank 16: 'have' appeared 66233 times\n",
-      "Rank 17: 'are' appeared 66048 times\n",
-      "Rank 18: 'on' appeared 66016 times\n",
-      "Rank 19: 'they' appeared 64592 times\n",
-      "Rank 20: 'not' appeared 60650 times\n",
-      "Rank 21: 'just' appeared 60405 times\n",
-      "Rank 22: 'so' appeared 59793 times\n",
-      "Rank 23: 'with' appeared 58359 times\n",
-      "Rank 24: 'was' appeared 54724 times\n",
-      "Rank 25: 'like' appeared 53507 times\n",
-      "Rank 26: 'if' appeared 52225 times\n",
-      "Rank 27: 'it's' appeared 51902 times\n",
-      "Rank 28: 'he' appeared 51162 times\n",
-      "Rank 29: 'because' appeared 49629 times\n",
-      "Rank 30: 'all' appeared 45478 times\n"
+      "Rank 15: 'this' appeared 69497 times\n"
      ]
     }
    ],
@@ -235,7 +250,7 @@
     "\n",
     "word_frequency = Counter(all_words)\n",
     "\n",
-    "common_words = word_frequency.most_common(30)\n",
+    "common_words = word_frequency.most_common(15)\n",
     "\n",
     "for rank, (word, count) in enumerate(common_words, start=1):\n",
     "    print(f\"Rank {rank}: '{word}' appeared {count} times\")"
@@ -270,37 +285,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Processed Data Analysis\n",
+    "\n",
+    "\n",
+    "As it can be observed below, the `processed` data has no longer missing values after preprocessing."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Comment 1: nc and nh.\n",
-      "Comment 2: you do know west teams play against west teams more than east teams right?\n",
-      "Comment 3: they were underdogs earlier today, but since gronk's announcement this afternoon, the vegas line has moved to patriots -1\n",
-      "Comment 4: this meme isn't funny none of the \"new york nigga\" ones are.\n",
-      "Comment 5: i could use one of those tools.\n",
-      "Comment 6: i don't pay attention to her, but as long as she's legal i wouldn't kick her out of bed (before she took a load)\n",
-      "Comment 7: trick or treating in general is just weird...\n",
-      "Comment 8: blade mastery+masamune or gtfo!\n",
-      "Comment 9: you don't have to, you have a good build, buy games or save it\n",
-      "Comment 10: i would love to see him at lolla.\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1007630 entries, 0 to 1007629\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column             Non-Null Count    Dtype \n",
+      "---  ------             --------------    ----- \n",
+      " 0   label              1007630 non-null  int64 \n",
+      " 1   comment            1007630 non-null  object\n",
+      " 2   author             1007630 non-null  object\n",
+      " 3   subreddit          1007630 non-null  object\n",
+      " 4   score              1007630 non-null  int64 \n",
+      " 5   ups                1007630 non-null  int64 \n",
+      " 6   downs              1007630 non-null  int64 \n",
+      " 7   date               1007630 non-null  object\n",
+      " 8   created_utc        1007630 non-null  object\n",
+      " 9   parent_comment     1007630 non-null  object\n",
+      " 10  comment_tokenized  1007630 non-null  object\n",
+      " 11  parent_tokenized   1007630 non-null  object\n",
+      "dtypes: int64(4), object(8)\n",
+      "memory usage: 92.3+ MB\n",
+      "None\n",
+      "label                0\n",
+      "comment              0\n",
+      "author               0\n",
+      "subreddit            0\n",
+      "score                0\n",
+      "ups                  0\n",
+      "downs                0\n",
+      "date                 0\n",
+      "created_utc          0\n",
+      "parent_comment       0\n",
+      "comment_tokenized    0\n",
+      "parent_tokenized     0\n",
+      "dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "# Loop through the first 10 comments and print each one\n",
-    "for i, comment in enumerate(train_df['comment'].head(10), start=1):\n",
-    "    print(f\"Comment {i}: {comment}\")\n"
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "root = Path().resolve()\n",
+    "\n",
+    "path = root / 'data' / 'processed' / 'processed_sarcasm.csv'\n",
+    "\n",
+    "processed = pd.read_csv(path, sep=',')\n",
+    "\n",
+    "print(processed.info())\n",
+    "print(processed.isnull().sum())"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -314,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
