--- a/data_distribution.ipynb
+++ b/data_distribution.ipynb
@@ -352,6 +352,87 @@
     "print(processed.info())\n",
     "print(processed.isnull().sum())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas\n",
+      "  Downloading pandas-2.2.3-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (13.1 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.1/13.1 MB\u001b[0m \u001b[31m23.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting numpy>=1.23.2\n",
+      "  Downloading numpy-2.1.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.3 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.3/16.3 MB\u001b[0m \u001b[31m33.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: python-dateutil>=2.8.2 in /scratch/s5130727/bert_env/lib/python3.11/site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1\n",
+      "  Downloading pytz-2024.2-py2.py3-none-any.whl (508 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m508.0/508.0 kB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting tzdata>=2022.7\n",
+      "  Downloading tzdata-2024.2-py2.py3-none-any.whl (346 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m346.6/346.6 kB\u001b[0m \u001b[31m7.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: six>=1.5 in /scratch/s5130727/bert_env/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Installing collected packages: pytz, tzdata, numpy, pandas\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "matplotlib 3.9.2 requires pillow>=8, which is not installed.\n",
+      "matplotlib 3.9.2 requires pyparsing>=2.3.1, which is not installed.\n",
+      "transformers 4.46.0 requires filelock, which is not installed.\n",
+      "transformers 4.46.0 requires pyyaml>=5.1, which is not installed.\n",
+      "transformers 4.46.0 requires regex!=2019.12.17, which is not installed.\n",
+      "datasets 3.0.2 requires filelock, which is not installed.\n",
+      "datasets 3.0.2 requires fsspec[http]<=2024.9.0,>=2023.1.0, which is not installed.\n",
+      "datasets 3.0.2 requires pyyaml>=5.1, which is not installed.\u001b[0m\u001b[31m\n",
+      "\u001b[0mSuccessfully installed numpy-2.1.2 pandas-2.2.3 pytz-2024.2 tzdata-2024.2\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns dropped and dataset saved successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Load the data\n",
+    "root = Path().resolve()\n",
+    "data = pd.read_csv(root / 'data' / 'splits' / 'train_data_distilbert.csv')\n",
+    "\n",
+    "# Columns to drop based on correlation heatmap analysis\n",
+    "# Keep 'comment_sentiment' and 'parent_sentiment' since they might be valuable\n",
+    "columns_to_drop = ['score', 'ups', 'downs', 'day_of_week', 'comment_length', 'parent_comment_length']\n",
+    "\n",
+    "# Drop the specified columns\n",
+    "data_cleaned = data.drop(columns=columns_to_drop)\n",
+    "\n",
+    "new_dir = root / 'data' / 'new'\n",
+    "new_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Save the cleaned dataset (optional)\n",
+    "data_cleaned.to_csv(new_dir / 'train_data_distilbert.csv', index=False)\n",
+    "\n",
+    "print(\"Columns dropped and dataset saved successfully.\")"
+   ]
   }
  ],
  "metadata": {
@@ -370,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
